<resources>
    <string name="app_name">Tichu Count</string>

    <!-- Matches Screen -->
    <string name="matches_title">Tichu Matches</string>
    <string name="match_nr">Game #</string>
    <string name="name_team_1">Team 1</string>
    <string name="score">Score</string>
    <string name="name_team_2">Team 2</string>
    <string name="action_delete_matches">Delete all</string>
    <string name="new_match_title">Team names</string>

    <!-- Match Screen -->
    <string name="game_load_error">Failed to load match with uid %s</string>
    <string name="match_title">%1$s vs %2$s</string>
    <string name="game_nr">Game #</string>
    <string name="action_delete_match">Delete match</string>

    <!-- Game Screen -->
    <string name="score_ticku">Tichu</string>
    <string name="score_big_ticku">Big Tichu</string>
    <string name="score_double_win">Double</string>
    <string name="score_win">Won</string>
    <string name="score_loss">Lost</string>
    <string name="score_played">Played score</string>
    <string name="score_total">Total score</string>
    <string name="action_delete_game">Delete game</string>
</resources>