<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/score_team_1"
        style="@style/Theme.DialogHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_team_1"
        app:layout_constraintBottom_toTopOf="@+id/separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/score_tichu_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_team_1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/score_tichu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score_ticku"
        style="@style/Theme.DialogHeader"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator" />

    <RadioGroup
        android:id="@+id/score_tichu_win_loss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_tichu_title">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/score_tichu_win"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_win"
            style="@style/Theme.DialogText" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/score_tichu_loss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_loss"
            style="@style/Theme.DialogText" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/score_big_tichu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_big_ticku"
        style="@style/Theme.DialogHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_tichu_win_loss" />

    <RadioGroup
        android:id="@+id/score_big_tichu_win_loss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_big_tichu_title">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/score_big_tichu_win"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_win"
            style="@style/Theme.DialogText" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/score_big_tichu_loss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_loss"
            style="@style/Theme.DialogText" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/score_double_win"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score_double_win"
        style="@style/Theme.DialogText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_big_tichu_win_loss" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/score_number_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        style="@style/Theme.DialogHeader"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_double_win" />

    <android.widget.NumberPicker
        android:id="@+id/score_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:descendantFocusability="blocksDescendants"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_number_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/score_total_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score_total"
        style="@style/Theme.DialogHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_number" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/score_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="123"
        style="@style/Theme.DialogText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_total_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPositive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_total" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNegative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnPositive"
        app:layout_constraintTop_toBottomOf="@+id/score_total" />

</androidx.constraintlayout.widget.ConstraintLayout>

